--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "devDependencies": {
     "@types/node": "20.17.6",
+    "rolldown": "^0.14.0",
     "typescript": "^5.6.3",
     "vercel": "^32.4.1"
   },
   "name": "hono-vercel",
   "scripts": {
-    "build": "tsc",
+    "build": "rolldown -c",
     "deploy": "vercel",
     "start": "vercel dev"
-  }
+  },
+  "type": "module"
 }
