--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "hono": "^4.6.9"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.13",
     "@types/node": "20.17.6",
     "rolldown": "^0.14.0",
     "typescript": "^5.6.3",
@@ -14,7 +15,7 @@
   },
   "name": "hono-vercel",
   "scripts": {
-    "build": "rolldown -c",
+    "build": "bun build.ts",
     "deploy": "vercel",
     "start": "vercel dev"
   },
