--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "",
   "functions": {
-    "api/**/*.js": {
+    "api/index.js": {
       "maxDuration": 60
     }
   },
